# TellyMedia-v4.1

./: .gitignore  CMakeLists.txt  README.md  TellyMedia.def  tm_resources.rc
.github/workflows/: build-macos.yml
MultiShaderEffect/: README.md
MultiShaderEffect/csos/: AnimatedDanceFloor.cso  CircularSpectrum.cso  ExplodingParticleGalaxy.cso  FloatingHolographicRings.cso  HypnoticSpiral.cso  MassiveSpeakerConeDistortionColored.cso  NorthernLightsAurora.cso  SpeakerConeDistortion.cso  VibrantNebula.cso
MultiShaderEffect/tools/: build_csos.bat  embed_csos.ps1
docs/: vdj-vertex-mutation-fix.md
include/tm/: TmLogger.h  TmMedia.h  TmPlatform.h  TmPlugin.h  TmRenderer.h  TmServices.h  TmTheme.h  TmTypes.h  TmUI.h  TmWebView.h
include/vdj/: vdjPlugin8.h  vdjVideo8.h
installer/: Info.plist.in  build_pkg.sh  install.sh
mac-installer/: TellyMedia-reborn-4.0.0.pkg  TellyMedia-reborn-4.0.2.pkg
shaders/: ExplodingParticleGalaxy.glsl  FloatingHolographicRings.glsl  GoldAbstractCircles.glsl  HypnoticSpiral.glsl  NorthernLightsAurora.glsl  SpeakerConeDistortion.glsl  VibrantNebula.glsl
src/app/: TmStandalone.cpp  mac_standalone.mm
src/core/: TmPlugin.cpp  TmPluginMac.mm  dllmain.cpp  mac_main.mm
src/media/: TmMedia.cpp  TmMediaMac.mm
src/render/: TmRenderer.cpp  TmRendererMac.mm
src/services/: TmLogger.cpp  TmLoggerMac.mm  TmServices.cpp  TmServicesMac.mm
src/ui/: TmTheme.cpp  TmUI.cpp  TmUIMac.mm  TmWebView.cpp  TmWebView.mm
vdj-shader-converter/: CMakeLists.txt
vdj-shader-converter/Visualisations/: GoldAbstractCircles.cso  GoldAbstractCircles.hlsl  s_24kD.vdjshader  s_4llg.cso  s_4llg.vdjshader  s_6Wf5.vdjshader  s_6Z7K.vdjshader  s_7QKu.vdjshader  s_7Sn9.vdjshader  s_8HYU.vdjshader  s_8K0j.vdjshader  s_A9oc.vdjshader  s_B3UR.vdjshader  s_BArA.vdjshader  s_Bui1.vdjshader  s_Clvb.vdjshader  s_Cqq5.vdjshader  s_CyCo.vdjshader  s_DkVu.vdjshader  s_EZHF.vdjshader  s_EbjU.vdjshader  s_ElYS.vdjshader  s_FVPJ.vdjshader  s_GMct.vdjshader  s_GRXN.vdjshader  s_HIkx.vdjshader  s_Hiur.vdjshader  s_ICQm.vdjshader  s_IEt1.vdjshader  s_J3eM.vdjshader  s_K2Ef.vdjshader  s_Kr00.vdjshader  s_Ln84.vdjshader  s_MeLe.vdjshader  s_Mgnt.vdjshader  s_Ncvx.vdjshader  s_ORhI.vdjshader  s_OU9X.vdjshader  s_Q9Hh.vdjshader  s_QHVB.vdjshader  (+47 more)
vdj-shader-converter/src/: Converter.cpp  Converter.h  IniHandler.cpp  IniHandler.h  Logger.cpp  Logger.h  main.cpp  miniz.h
web/: index.html
web/css/: styles.css
web/js/: app.js
